add p3, init work on p4

--- a/ds-report.tex
+++ b/ds-report.tex
@@ -51,6 +51,7 @@ of the odd semester in the academic year 2016-17.
 
 \input{src/p1/doc.tex}
 \input{src/p2/doc.tex}
-
+\input{src/p3/doc.tex}
+\input{src/p4/doc.tex}
 
 \end{document}
