--- a/src/p4/doc.tex
+++ b/src/p4/doc.tex
@@ -116,11 +116,11 @@ record List {
 
 \subsubsection{doublylinkedlist.c}
 
-% \lstinputlisting[style=myC]{src/p4/doublylinkedlist.c}
+\lstinputlisting[style=myC]{src/p4/doublylinkedlist.c}
 
 \subsubsection{doublylinkedlist.output}
 
-% \lstinputlisting[]{src/p4/doublylinkedlist.output}
+\lstinputlisting[]{src/p4/doublylinkedlist.output}
 
 
 \section{Result}
