--- a/ds-report.tex
+++ b/ds-report.tex
@@ -53,5 +53,6 @@ of the odd semester in the academic year 2016-17.
 \input{src/p2/doc.tex}
 \input{src/p3/doc.tex}
 \input{src/p4/doc.tex}
+\input{src/p5/doc.tex}
 
 \end{document}
