p6: done. 4 more to go.

--- a/ds-report.tex
+++ b/ds-report.tex
@@ -54,5 +54,6 @@ of the odd semester in the academic year 2016-17.
 \input{src/p3/doc.tex}
 \input{src/p4/doc.tex}
 \input{src/p5/doc.tex}
+\input{src/p6/doc.tex}
 
 \end{document}
