--- a/ds-report.tex
+++ b/ds-report.tex
@@ -58,6 +58,7 @@ of the odd semester in the academic year 2016-17.
 \input{src/p7/doc.tex}
 \input{src/p8/doc.tex}
 \input{src/p9/doc.tex}
+\input{src/p10/doc.tex}
 
 
 \end{document}
