toc: fix page numbering

--- a/ds-report.tex
+++ b/ds-report.tex
@@ -43,7 +43,10 @@ It is a report of all the programs performed in the laboratory during the course
 of the odd semester in the academic year 2016-17.
 \end{abstract}
 
+\pagenumbering{gobble} % http://tex.stackexchange.com/a/41558
+
 \tableofcontents
+
 \addtocontents{toc}{\protect\thispagestyle{empty}} % http://tex.stackexchange.com/a/2996
 
 \newpage
