--- a/ds-report.tex
+++ b/ds-report.tex
@@ -24,6 +24,7 @@
 	\titlespacing*{\chapter}{0pt}{*0}{*4}
 
 \usepackage{algpseudocode}
+\algrenewcommand{\alglinenumber}[1]{\color{black}\large-\normalsize}
 
 \usepackage{listings}
 	\lstloadlanguages{C}
