--- a/src/p1/doc.tex
+++ b/src/p1/doc.tex
@@ -7,7 +7,7 @@ To implement program(s) to perform "linear search" and "binary search" over an a
 \section{Algorithm}
 
 \subsection{Linear Search}
-\begin{algorithmic}
+\begin{algorithmic}[1]
 	\Function{linearsearch}{$x, A[]$}
 		\State $i \gets 0$
 		\State $l \gets length(A)$
@@ -21,7 +21,7 @@ To implement program(s) to perform "linear search" and "binary search" over an a
 \end{algorithmic}
 
 \subsection{Binary Search}
-\begin{algorithmic}
+\begin{algorithmic}[1]
 	\Function{swap}{$A, B$}
 		\State $temp \gets A$
 		\State $A = B$
