--- a/src/p2/doc.tex
+++ b/src/p2/doc.tex
@@ -7,7 +7,7 @@ To implement program(s) to perform "bubble sort" and "insertion sort" over an ar
 \section{Algorithm}
 
 \subsection{Bubble Sort}
-\begin{algorithmic}
+\begin{algorithmic}[1]
 	\Function{swap}{$A, B$}
 		\State $temp \gets A$
 		\State $A = B$
@@ -31,7 +31,7 @@ To implement program(s) to perform "bubble sort" and "insertion sort" over an ar
 
 
 \subsection{Insertion Sort}
-\begin{algorithmic}
+\begin{algorithmic}[1]
 	\Function{swap}{$A, B$}
 		\State $temp \gets A$
 		\State $A = B$
