--- a/ds-report.tex
+++ b/ds-report.tex
@@ -23,6 +23,8 @@
 
 	\titlespacing*{\chapter}{0pt}{*0}{*4}
 
+\usepackage{xcolor}
+
 \usepackage{algpseudocode}
 \algrenewcommand{\alglinenumber}[1]{\color{black}\large-\normalsize}
 
