teh.invisible.text.
writing a script for this would've been faster :neutralface:

--- a/src/p1/doc.tex
+++ b/src/p1/doc.tex
@@ -2,11 +2,14 @@
 
 \section{Aim}
 
+{\Large\color{white}
 To implement program(s) to perform "linear search" and "binary search" over an array of elements.
+\color{black}}
 
 \section{Algorithm}
 
 \subsection{Linear Search}
+{\Large\color{white}
 \begin{algorithmic}[1]
 	\Function{linearsearch}{$x, A[]$}
 		\State $i \gets 0$
@@ -19,8 +22,10 @@ To implement program(s) to perform "linear search" and "binary search" over an a
 		\State \Return $\lambda$
 	\EndFunction
 \end{algorithmic}
+\color{black}}
 
 \subsection{Binary Search}
+{\Large\color{white}
 \begin{algorithmic}[1]
 	\Function{swap}{$A, B$}
 		\State $temp \gets A$
@@ -61,6 +66,7 @@ To implement program(s) to perform "linear search" and "binary search" over an a
 		\State \Return $\lambda$
 	\EndFunction
 \end{algorithmic}
+\color{black}}
 
 \section{Code}
 
@@ -84,5 +90,11 @@ To implement program(s) to perform "linear search" and "binary search" over an a
 
 \lstinputlisting[]{src/p1/binarysearch.output}
 
+\vfill
+
 \section{Result}
+{\Large\color{white}
 Linear Search and Binary Search algorithms were implemented successfully.
+\color{black}}
+
+\clearpage
