--- a/src/p10/doc.tex
+++ b/src/p10/doc.tex
@@ -1,10 +1,3 @@
-\chapter{Dijkstra's algorithm}
-
-\section{Aim}
-
-To implement Dijkstra's algorithm for finding the shortest path between
-nodes in a graph.
-
 %%
 %% DISCLAIMER: i have not the slightest clue what Dijsktra's algorithm is
 %% or how it works
@@ -12,10 +5,19 @@ nodes in a graph.
 %% thank whoever posted this:
 %% http://www.geeksforgeeks.org/greedy-algorithms-set-6-dijkstras-shortest-path-algorithm/
 
-\section{Algorithm}
+\chapter{Dijkstra's algorithm}
 
+\section{Aim}
+
+{\Large\color{white}
+To implement Dijkstra's algorithm for finding the shortest path between
+nodes in a graph.
+\color{black}}
+
+\section{Algorithm}
 %% as i said, no f'king clue. lemme just copy paste stuff. thanks wikipedia.
 
+{\Large\color{white}
 \begin{enumerate}
 	\item Assign to every node a tentative distance value: set it to zero for the
 	initial node and $\infty$ for all other nodes
@@ -29,6 +31,7 @@ nodes in a graph.
 	\item If the destination node has been marked visited (when planning a route between two specific nodes) or if the smallest tentative distance among the nodes in the unvisited set is infinity (when planning a complete traversal; occurs when there is no connection between the initial node and remaining unvisited nodes), then stop. The algorithm has finished. % :(
 	\item Otherwise, select the unvisited node that is marked with the smallest tentative distance, set it as the new "current node", and go back to step 3.
 \end{enumerate}
+\color{black}}
 
 \section{Code}
 
@@ -36,9 +39,17 @@ nodes in a graph.
 
 \lstinputlisting[style=myC]{src/p10/dijkstra.c}
 
+\clearpage
+
 \subsubsection{dijkstra.output}
 
 \lstinputlisting[style=myC]{src/p10/dijkstra.output}
 
+\vfill
+
 \section{Result}
+{\Large\color{white}
 Dijkstra's algorithm was successfully implemented.
+\color{black}}
+
+\clearpage
