--- a/src/p2/doc.tex
+++ b/src/p2/doc.tex
@@ -2,11 +2,14 @@
 
 \section{Aim}
 
+{\Large\color{white}
 To implement program(s) to perform "bubble sort" and "insertion sort" over an array of elements.
+\color{black}}
 
 \section{Algorithm}
 
 \subsection{Bubble Sort}
+{\Large\color{white}
 \begin{algorithmic}[1]
 	\Function{swap}{$A, B$}
 		\State $temp \gets A$
@@ -28,9 +31,10 @@ To implement program(s) to perform "bubble sort" and "insertion sort" over an ar
 		\EndWhile
 	\EndFunction
 \end{algorithmic}
-
+\color{black}}
 
 \subsection{Insertion Sort}
+{\Large\color{white}
 \begin{algorithmic}[1]
 	\Function{swap}{$A, B$}
 		\State $temp \gets A$
@@ -51,6 +55,7 @@ To implement program(s) to perform "bubble sort" and "insertion sort" over an ar
 		\EndWhile
 	\EndFunction
 \end{algorithmic}
+\color{black}}
 
 \section{Code}
 
@@ -74,5 +79,11 @@ To implement program(s) to perform "bubble sort" and "insertion sort" over an ar
 
 \lstinputlisting[]{src/p2/insertionsort.output}
 
+\vfill
+
 \section{Result}
+{\Large\color{white}
 Bubble Sort and Insertion Sort algorithms were implemented successfully.
+\color{black}}
+
+\clearpage
