--- a/src/p5/doc.tex
+++ b/src/p5/doc.tex
@@ -2,10 +2,13 @@
 
 \section{Aim}
 
+{\Large\color{white}
 To implement linked list operations on a "Circular Linked List".
+\color{black}}
 
 \section{Algorithm}
 
+{\Large\color{white}
 Let the $Node$ data structure contain three fields,
 data and references to the next and previous node. Let there be a variable $L$ to keep track of the last variable.
 
@@ -20,9 +23,11 @@ record List {
 }
 
 \end{lstlisting}
+\color{black}}
 
 \subsection{Insertion}
 
+{\Large\color{white}
 \begin{algorithmic}[1]
 	\Function{insertafter}{Node $node$, Node $newNode$}
 		\If{$node = \phi$}
@@ -33,8 +38,10 @@ record List {
 		\EndIf
 	\EndFunction
 \end{algorithmic}
+\color{black}}
 
 \subsection{Deletion}
+{\Large\color{white}
 \begin{algorithmic}[1]
 	\Function{deletebeginning}{}
 		\State $lastNode \gets list.lastNode$
@@ -59,10 +66,11 @@ record List {
 		\State \Call{destroy}{t}
 	\EndFunction
 \end{algorithmic}
-
+\color{black}}
 
 \subsection{Traversal}
 
+{\Large\color{white}
 \begin{algorithmic}[1]
 	\Function{iterate}{Node $node$}
 		\If{$node \neq \phi$}
@@ -74,10 +82,11 @@ record List {
 		\EndIf
 	\EndFunction
 \end{algorithmic}
-
+\color{black}}
 
 \subsection{Searching}
 
+{\Large\color{white}
 \begin{algorithmic}[1]
 	\Function{search}{Node $node$, data $x$}
 		\State $found \gets false$
@@ -93,6 +102,7 @@ record List {
 		\State \Return $\phi$
 	\EndFunction
 \end{algorithmic}
+\color{black}}
 
 \section{Code}
 
@@ -100,10 +110,17 @@ record List {
 
 \lstinputlisting[style=myC]{src/p4/doublylinkedlist.c}
 
+\clearpage
+
 \subsubsection{circularlinkedlist.output}
 
 \lstinputlisting[]{src/p4/doublylinkedlist.output}
 
+\vfill
 
 \section{Result}
+{\Large\color{white}
 Circular Linked List operations were implemented successfully.
+\color{black}}
+
+\clearpage
