--- a/ds-report.tex
+++ b/ds-report.tex
@@ -38,7 +38,7 @@
 \begin{document}
 
 \maketitle
-\thispagestyle{empty} % http://stackoverflow.com/a/501424
+%\thispagestyle{empty} % http://stackoverflow.com/a/501424
 
 \begin{abstract}
 This is the end-semester report submitted for the course of 15CS201J - Data Structures Laboratory.
