--- a/src/p1/doc.tex
+++ b/src/p1/doc.tex
@@ -68,25 +68,25 @@ To implement program(s) to perform "linear search" and "binary search" over an a
 \end{algorithmic}
 \color{black}}
 
-\section{Code}
+\section{Program}
 
 \subsection{Linear Search}
 
-\subsubsection{linearsearch.c}
+\subsubsection{\underline{Code}}
 
 \lstinputlisting[style=myC]{src/p1/linearsearch.c}
 
-\subsubsection{linearsearch.output}
+\subsubsection{\underline{Output}}
 
 \lstinputlisting[]{src/p1/linearsearch.output}
 
 \subsection{Binary Search}
 
-\subsubsection{binarysearch.c}
+\subsubsection{\underline{Code}}
 
 \lstinputlisting[style=myC]{src/p1/binarysearch.c}
 
-\subsubsection{binarysearch.output}
+\subsubsection{\underline{Output}}
 
 \lstinputlisting[]{src/p1/binarysearch.output}
 
