--- a/src/p10/doc.tex
+++ b/src/p10/doc.tex
@@ -33,15 +33,15 @@ nodes in a graph.
 \end{enumerate}
 \color{black}}
 
-\section{Code}
+\section{Program}
 
-\subsubsection{dijkstra.c}
+\subsubsection{\underline{Code}}
 
 \lstinputlisting[style=myC]{src/p10/dijkstra.c}
 
 \clearpage
 
-\subsubsection{dijkstra.output}
+\subsubsection{\underline{Output}}
 
 \lstinputlisting[style=myC]{src/p10/dijkstra.output}
 
