--- a/src/p2/doc.tex
+++ b/src/p2/doc.tex
@@ -57,25 +57,25 @@ To implement program(s) to perform "bubble sort" and "insertion sort" over an ar
 \end{algorithmic}
 \color{black}}
 
-\section{Code}
+\section{Program}
 
 \subsection{Bubble Sort}
 
-\subsubsection{bubblesort.c}
+\subsubsection{\underline{Code}}
 
 \lstinputlisting[style=myC]{src/p2/bubblesort.c}
 
-\subsubsection{bubblesort.output}
+\subsubsection{\underline{Output}}
 
 \lstinputlisting[]{src/p2/bubblesort.output}
 
 \subsection{Insertion Sort}
 
-\subsubsection{insertionsort.c}
+\subsubsection{\underline{Code}}
 
 \lstinputlisting[style=myC]{src/p2/insertionsort.c}
 
-\subsubsection{insertionsort.output}
+\subsubsection{\underline{output}}
 
 \lstinputlisting[]{src/p2/insertionsort.output}
 
