--- a/src/p3/doc.tex
+++ b/src/p3/doc.tex
@@ -93,13 +93,13 @@ record List {
 \end{algorithmic}
 \color{black}}
 
-\section{Code}
+\section{Program}
 
-\subsubsection{singlylinkedlist.c}
+\subsubsection{\underline{Code}}
 
 \lstinputlisting[style=myC]{src/p3/singlylinkedlist.c}
 
-\subsubsection{singlylinkedlist.output}
+\subsubsection{\underline{Output}}
 
 \lstinputlisting[]{src/p3/singlylinkedlist.output}
 
