--- a/src/p4/doc.tex
+++ b/src/p4/doc.tex
@@ -124,13 +124,13 @@ record List {
 \end{algorithmic}
 \color{black}}
 
-\section{Code}
+\section{Program}
 
-\subsubsection{doublylinkedlist.c}
+\subsubsection{\underline{Code}}
 
 \lstinputlisting[style=myC]{src/p4/doublylinkedlist.c}
 
-\subsubsection{doublylinkedlist.output}
+\subsubsection{\underline{Output}}
 
 \lstinputlisting[]{src/p4/doublylinkedlist.output}
 
