--- a/src/p6/doc.tex
+++ b/src/p6/doc.tex
@@ -133,25 +133,25 @@ record Stack {
 \end{algorithmic}
 \color{black}}
 
-\section{Code}
+\section{Program}
 
 \subsection{Stack using Array}
 
-\subsubsection{stack-array.c}
+\subsubsection{\underline{Code}}
 
 \lstinputlisting[style=myC]{src/p6/stack-array.c}
 
-\subsubsection{stack-array.output}
+\subsubsection{\underline{Output}}
 
 \lstinputlisting[]{src/p6/stack-array.output}
 
 \subsection{Stack using Linked List}
 
-\subsubsection{stack-ll.c}
+\subsubsection{\underline{Code}}
 
 \lstinputlisting[style=myC]{src/p6/stack-ll.c}
 
-\subsubsection{stack-ll.output}
+\subsubsection{\underline{Output}}
 
 \lstinputlisting[]{src/p6/stack-ll.output}
 
