--- a/src/p7/doc.tex
+++ b/src/p7/doc.tex
@@ -147,25 +147,25 @@ record Queue
 \end{algorithmic}
 \color{black}}
 
-\section{Code}
+\section{Program}
 
 \subsection{Queue using Array}
 
-\subsubsection{q-array.c}
+\subsubsection{\underline{Code}}
 
 \lstinputlisting[style=myC]{src/p7/q-array.c}
 
-\subsubsection{q-array.output}
+\subsubsection{\underline{Output}}
 
 \lstinputlisting[]{src/p7/q-array.output}
 
 \subsection{Queue using Linked List}
 
-\subsubsection{q-ll.c}
+\subsubsection{\underline{Code}}
 
 \lstinputlisting[style=myC]{src/p7/q-ll.c}
 
-\subsubsection{q-ll.output}
+\subsubsection{\underline{Output}}
 
 \lstinputlisting[]{src/p7/q-ll.output}
 
