--- a/src/p8/doc.tex
+++ b/src/p8/doc.tex
@@ -53,13 +53,13 @@ record Node {
 \end{algorithmic}
 \color{black}}
 
-\section{Code}
+\section{Program}
 
-\subsubsection{bst-traversal.c}
+\subsubsection{\underline{Code}}
 
 \lstinputlisting[style=myC]{src/p8/bst-traversal.c}
 
-\subsubsection{bst-traversal.output}
+\subsubsection{\underline{Output}}
 
 \lstinputlisting[]{src/p8/bst-traversal.output}
 
