--- a/src/p9/doc.tex
+++ b/src/p9/doc.tex
@@ -76,13 +76,13 @@ record Node
 \end{algorithmic}
 \color{black}}
 
-\section{Code}
+\section{Program}
 
-\subsubsection{bst-operations.c}
+\subsubsection{\underline{Code}}
 
 \lstinputlisting[style=myC]{src/p9/bst-operations.c}
 
-\subsubsection{bst-operations.output}
+\subsubsection{\underline{Output}}
 
 \lstinputlisting[style=myC]{src/p9/bst-operations.output}
 
