--- a/src/p5/doc.tex
+++ b/src/p5/doc.tex
@@ -104,15 +104,15 @@ record List {
 \end{algorithmic}
 \color{black}}
 
-\section{Code}
+\section{Program}
 
-\subsubsection{circularlinkedlist.c}
+\subsubsection{\underline{Code}}
 
 \lstinputlisting[style=myC]{src/p4/doublylinkedlist.c}
 
 \clearpage
 
-\subsubsection{circularlinkedlist.output}
+\subsubsection{\underline{Output}}
 
 \lstinputlisting[]{src/p4/doublylinkedlist.output}
 
